deployments/custom/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-test
spec:
  type: ClusterIP
  selector:
    app: nginx-test
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
  externalTrafficPolicy: Cluster
