deployments/custom/custom-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: custom-gateway
spec:
  gatewayClassName: cilium
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "nginx.192.168.100.244.sslip.io"
  addresses:
    - type: IPAddress
      value: 192.168.100.244
