deployments/custom/second-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nginx-route-second
spec:
  parentRefs:
    - name: custom-gateway
  hostnames:
    - "nginx.192.168.100.244.sslip.io"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /

      backendRefs:
        - name: nginx-test
          port: 80
